column break inside avoid

--- a/assets/css/inc/mixins.less
+++ b/assets/css/inc/mixins.less
@@ -471,6 +471,12 @@
     column-gap: @gap;
 }
 
+.column-break-inside-avoid {
+	-webkit-column-break-inside: avoid; /* Chrome, Safari */
+    page-break-inside: avoid;           /* Theoretically FF 20+ */
+    break-inside: avoid-column;         /* IE 11 */
+}
+
 /* ------------------------ */
 /* LESS mixin for CSS arrow */
 /* ------------------------ */
